[package]
name = "xaynet-sdk"
version = "0.1.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "The Xayn Network project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
readme = "../../README.md"
homepage = "https://xaynet.dev/"
repository = "https://github.com/xaynetwork/xaynet/"
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "cryptography"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1.49"
base64 = "0.13.0"
bincode = "1.3.3"
derive_more = { version = "0.99.13", default-features = false, features = ["from"] }
# TODO: remove once concurrent_futures.rs was moved to the e2e package
futures = "0.3.14"
paste = "1.0.5"
serde = { version = "1.0.125", features = ["derive"] }
sodiumoxide = "0.2.6"
thiserror = "1.0.24"
# TODO: move to dev-dependencies once concurrent_futures.rs was moved to the e2e package
tokio = { version = "1.5.0", features = ["rt", "macros"] }
tracing = "0.1.25"
url = "2.2.1"
xaynet-core = { path = "../xaynet-core", version = "0.2.0" }

# feature: reqwest client
reqwest = { version = "0.11.2", default-features = false, optional = true }
# This has to match the version used by reqwest. It would be nice if
# reqwest just re-exported it
bytes = { version = "1.0.1", optional = true }
rand = "0.8.3"

[dev-dependencies]
mockall = "0.9.1"
num = { version = "0.4.0", features = ["serde"] }
serde_json = "1.0.64"
tokio-test = "0.4.1"
xaynet-core = { path = "../xaynet-core", features = ["testutils"] }

[features]
default = []
reqwest-client = ["reqwest", "bytes"]
