[package]
name = "xaynet-server"
version = "0.2.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "The Xayn Network project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
readme = "../../README.md"
homepage = "https://xaynet.dev/"
repository = "https://github.com/xaynetwork/xaynet/"
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "cryptography"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
base64 = "0.13.0"
bincode = "1.3.1"
bitflags = "1.2.1"
bytes = "1.0.1"
config = "0.10.1"
chrono = "0.4.19"
derive_more = { version = "0.99.11", default-features = false, features = [
    "as_mut",
    "as_ref",
    "deref",
    "display",
    "from",
    "index",
    "index_mut",
    "into",
] }
displaydoc = "0.1.7"
futures = "0.3.12"
hex = "0.4.2"
http = "0.2.3"
influxdb = { version = "0.3.0", default-features = false, features = ["h1-client"] }
num = { version = "0.3.1", features = ["serde"] }
num_enum = "0.5.1"
once_cell = "1.5.2"
paste = "1.0.4"
rand = "0.8.3"
rand_chacha = "0.3.0"
serde = { version = "1.0.123", features = ["derive"] }
rayon = "1.5.0"
redis = { version = "0.19.0", default-features = false, features = [
    "aio",
    "connection-manager",
    "script",
    "tokio-comp",
] }
sodiumoxide = "0.2.6"
structopt = "0.3.21"
thiserror = "1.0.23"
tokio = { version = "1.1.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "net",
    "time",
] }
tower = { version = "0.4.4", default-features = false, features = [
    "buffer",
    "load-shed",
    "limit"
] }
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.15"
validator = { version = "0.12.0", features = ["derive"] }
warp = "0.3.0"
xaynet-core = { path = "../xaynet-core", version = "0.2.0" }

# feature: model-persistence
fancy-regex = { version = "0.4.1", optional = true }
rusoto_core = { version = "0.46.0", optional = true }
rusoto_s3 = { version = "0.46.0", optional = true }

[dev-dependencies]
# We can't run tarpaulin with the flag `--test-threads=1` because it can trigger a segfault:
# https://github.com/xd009642/tarpaulin/issues/317. A workaround is to use `serial_test`.
serial_test = "0.5.1"
tokio-test = "0.4.0"
tower-test = "0.4.0"

[[bin]]
name = "coordinator"
path = "src/bin/main.rs"

[features]
default = []
full = ["metrics", "model-persistence", "tls"]
metrics = []
model-persistence = ["fancy-regex", "rusoto_core", "rusoto_s3"]
tls = ["warp/tls"]
