[package]
name = "xaynet-server"
version = "0.2.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "The Xayn Network project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
readme = "../../README.md"
homepage = "https://xaynet.dev/"
repository = "https://github.com/xaynetwork/xaynet/"
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "cryptography"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
base64 = "0.13.0"
bincode = "1.3.3"
bitflags = "1.3.2"
bytes = "1.0.1"
config = "0.12.0"
chrono = "0.4.19"
derive_more = { version = "0.99.17", default-features = false, features = [
    "as_mut",
    "as_ref",
    "deref",
    "display",
    "from",
    "index",
    "index_mut",
    "into",
] }
displaydoc = "0.2.3"
futures = "0.3.21"
hex = "0.4.3"
http = "0.2.6"
influxdb = "0.5.2"
num = { version = "0.4.0", features = ["serde"] }
num_enum = "0.5.7"
once_cell = "1.10.0"
paste = "1.0.7"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.137", features = ["derive"] }
rayon = "1.5.2"
redis = { version = "0.21.5", default-features = false, features = [
    "aio",
    "connection-manager",
    "script",
    "tokio-comp",
] }
sodiumoxide = "0.2.7"
structopt = "0.3.26"
thiserror = "1.0.30"
tokio = { version = "1.18.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
    "net",
    "time",
] }
tower = { version = "0.4.6", default-features = false, features = [
    "buffer",
    "load-shed",
    "limit"
] }
tracing = "0.1.34"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
validator = { version = "0.14.0", features = ["derive"] }
warp = "0.3.1"
xaynet-core = { path = "../xaynet-core", version = "0.2.0" }

# feature: model-persistence
fancy-regex = { version = "0.9.0", optional = true }
rusoto_core = { version = "0.46.0", optional = true }
rusoto_s3 = { version = "0.46.0", optional = true }

[dev-dependencies]
# We can't run tarpaulin with the flag `--test-threads=1` because it can trigger a segfault:
# https://github.com/xd009642/tarpaulin/issues/317. A workaround is to use `serial_test`.
mockall = "0.11.0"
serial_test = "0.6.0"
tokio-test = "0.4.1"
tower-test = "0.4.0"

[[bin]]
name = "coordinator"
path = "src/bin/main.rs"

[features]
default = []
full = ["metrics", "model-persistence", "tls"]
metrics = []
model-persistence = ["fancy-regex", "rusoto_core", "rusoto_s3"]
tls = ["warp/tls"]
