[package]
name = "xaynet"
version = "0.11.0"
authors = ["Xayn Engineering <engineering@xaynet.dev>"]
edition = "2018"
description = "The Xayn Network project is building a privacy layer for machine learning so that AI projects can meet compliance such as GDPR and CCPA. The approach relies on Federated Learning as enabling technology that allows production AI applications to be fully privacy compliant."
readme = "../../README.md"
homepage = "https://xaynet.dev/"
repository = "https://github.com/xaynetwork/xaynet/"
license-file = "../../LICENSE"
keywords = ["federated-learning", "fl", "ai", "machine-learning"]
categories = ["science", "cryptography"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
codecov = { repository = "xaynetwork/xaynet", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
xaynet-core = { path = "../xaynet-core", version = "0.2.0" }

# feature: mobile
xaynet-mobile = { path = "../xaynet-mobile", version = "0.1.0", optional = true }

# feature: sdk
xaynet-sdk = { path = "../xaynet-sdk", version = "0.1.0", optional = true }

# feature: server
xaynet-server = { path = "../xaynet-server", version = "0.2.0", optional = true }

[features]
default = []
full = ["mobile", "sdk", "server"]
mobile = ["xaynet-mobile"]
sdk = ["xaynet-sdk"]
server = ["xaynet-server"]
